# spending-insights

./: CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md
docs/: README.md
extractor/: .env.example  .gitignore  pyproject.toml
extractor/app/: extraction.py  main.py  normalize.py  parser.py  schemas.py
extractor/tests/: conftest.py  test_extract_endpoint.py  test_extraction.py  test_normalize.py  test_parser.py
extractor/tests/fixtures/: generate_fixture.py
extractor/tools/: diagnose.py
web/: .env.example  .gitignore  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
web/app/: globals.css  layout.tsx
web/app/api/analytics/: route.ts
web/app/api/insights/: route.ts
web/app/api/reports/: route.ts
web/components/: category-picker.tsx  category-pie.tsx  dashboard.tsx  editable-cell.tsx  filter-bar.tsx  insights-card.tsx  metric-cards.tsx  report-sync.tsx  rule-prompt.tsx  source-badge.tsx  summary-card.tsx  transactions-table.tsx  upload-button.tsx
web/lib/: analytics.ts  category-colors.ts  classify.ts  extractor-client.ts  format.ts  insights.ts  notion.ts  openai.ts  prisma.ts  transactions.ts
web/prisma/: schema.prisma
web/tests/: analytics-mom.test.ts  analytics.test.ts  category-badge.test.tsx  classify.test.ts  dashboard-cards.test.tsx  dashboard.test.tsx  insights-api.test.ts  insights-card.test.tsx  insights-service.test.ts  merchant-rules.test.ts  notion.test.ts  prisma.test.ts  reports-insights.test.ts  reports.test.ts  transactions.test.ts  upload.test.ts
web/tests/helpers/: db.ts  fake-notion.ts
(+6 files in other folders)
