[project]
name = "extractor"
version = "0.1.0"
description = "PDF statement extraction service: PDF bytes in, clean transaction JSON out"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.0",
    "pdfplumber>=0.11",
    "openai>=1.0",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "httpx>=0.27",
    "reportlab>=4.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before the app imports so they see extractor/.env.
"app/main.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
